--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LUZTIME - Venta de Relojes</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header><h1>
-        
-    </h1></header>
+
+  <!-- Header -->
+  <header>
+    <img src="../assets/images/Logo.png" alt="">
+    <nav> 
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Historia</a></li>
+        <li><a href="#">Ventas</a></li>
+        <li><a href="#">Relojes</a></li>
+        <li><a href="#">Relojes 1.1</a></li>
+        <li><a href="#">Provedores</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div>
+        <h1>LUZTIME</h1>
+    </div>
+  </main>
+
+  <!-- Main Section -->
+  <section>
+    <h1 class="title">Lo último en Relojes de lujo</h1>
+    <div class="products">
+      <div class="product">
+        <img src="https://via.placeholder.com/300" alt="Reloj 1">
+        <h3>Reloj Clásico</h3>
+        <p class="price">$1,200 USD</p>
+        <a href="#" class="btn">Ver Producto</a>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/300" alt="Reloj 2">
+        <h3>Reloj Deportivo</h3>
+        <p class="price">$899 USD</p>
+        <a href="#" class="btn">Ver Producto</a>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/300" alt="Reloj 3">
+        <h3>Reloj de Edición Limitada</h3>
+        <p class="price">$2,500 USD</p>
+        <a href="#" class="btn">Ver Producto</a>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
